# GUI

./: CMakeLists.txt
src/: Window.cpp  Window.h  main.cpp
src/events/: Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  EventHooks.cpp  EventHooks.h  EventManager.cpp  EventManager.h
src/layout/: LayoutManager.cpp  LayoutManager.h
src/math/: utils.cpp  utils.h
src/misc/: colors.h  enums.h
src/renderer/: Renderer.cpp  Renderer.h
src/sdl/: error.cpp  error.h  events.cpp  events.h  render.cpp  render.h  sdl.h  sys.cpp  sys.h  types.h  video.cpp  video.h  window.cpp  window.h
src/widgets/: Button.cpp  Button.h  Frame.cpp  Frame.h  Widget.cpp  Widget.h
